The palette picker works now!

--- a/about_me.html
+++ b/about_me.html
@@ -2,7 +2,6 @@
 	<link type="text/css" href="styles.css" rel="stylesheet"/>
 </head>
 <body>
-<a href="index.html"><--</a>
-<h1>I'm Benjamin Villard, a guy in Zurich, Switzerland!<h1>
-<p>
+	<a href>Colors!</a> <a href="index.html"><--</a>
+	<h1>I'm Benjamin Villard, a guy in Zurich, Switzerland!</h1>
 </body>
