--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 	<link type="text/css" href="styles.css" rel="stylesheet"/>
 </head>
 <body>
-	<a href="about_me.html">About Me</a>
+	<a id="colors" href="#">Colors!</a> <a href="about_me.html">About Me</a>
 	<h1>Benjamin Villard's placeholder title</h1>
 	<p>Welcome to my little corner of the internet! Here i'll be infrequently posting about my passions and hobbies.
 	<br>This is my first project with html, so it's quite rough.</p>
+
+	<script src="palette_changer.js"></script>
 </body>
