began implementing the post system

--- a/about_me.html
+++ b/about_me.html
@@ -1,7 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
+	<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Me // Benjamin Villard</title>
 	<link type="text/css" href="styles.css" rel="stylesheet"/>
+
 </head>
 <body>
-	<a href>Colors!</a> <a href="index.html"><--</a>
+	<nav>
+		<a href="posts.html">Posts</a> /
+		/ <a id="colors" href="#">Colors!</a> /
+		/ <a href="index.html"><--</a>
+	</nav>
+
 	<h1>I'm Benjamin Villard, a guy in Zurich, Switzerland!</h1>
+
+	<script src="palette_changer.js"></script>
 </body>
+</html>
