beginning of font font changer

--- a/about_me.html
+++ b/about_me.html
@@ -11,6 +11,7 @@
 	<nav>
 		<a href="posts.html">Posts</a> /
 		/ <a id="colors" href="#">Colors!</a> /
+		/ <a id="change-font" href="#">Fonts!</a> /
 		/ <a href="index.html"><--</a>
 	</nav>
 
