--- a/posts.html
+++ b/posts.html
@@ -11,6 +11,7 @@
     <nav>
 		<a href="index.html"><--</a> /
 		/ <a id="colors" href="#">Colors!</a> /
+        / <a id="change-font" href="#">Fonts!</a> /
 		/ <a href="about_me.html">About Me</a>
 	</nav>
     <h1>my Blog</h1>
