font changer works now! but not in localhost :(

--- a/about_me.html
+++ b/about_me.html
@@ -5,18 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me // Benjamin Villard</title>
 	<link type="text/css" href="styles.css" rel="stylesheet"/>
+	<script src="font_changer.js" defer></script>
+	<script src="palette_changer.js" defer></script>
 
 </head>
 <body>
 	<nav>
-		<a href="posts.html">Posts</a> /
-		/ <a id="colors" href="#">Colors!</a> /
-		/ <a id="change-font" href="#">Fonts!</a> /
-		/ <a href="index.html"><--</a>
+		<a href="posts.html">Posts</a>
+		 // 
+		<a id="colors" href="#">Colors!</a>
+		 // 
+		<a id="change-font" href="#">Fonts!</a>
+		 // 
+		<a href="index.html"><--</a>
 	</nav>
 
 	<h1>I'm Benjamin Villard, a guy in Zurich, Switzerland!</h1>
 
-	<script src="palette_changer.js"></script>
 </body>
 </html>
