--- a/index.html
+++ b/index.html
@@ -5,20 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Benjamin Villard</title>
 	<link type="text/css" href="styles.css" rel="stylesheet"/>
+	<script src="font_changer.js" defer></script>
+	<script src="palette_changer.js" defer></script>
 
 </head>
 <body>
 	<nav>
-		<a href="posts.html">Posts</a> /
-		/ <a id="colors" href="#">Colors!</a> /
-		/ <a id="change-font" href="#">Fonts!</a> /
-		/ <a href="about_me.html">About Me</a>
+		<a href="posts.html">Posts</a>
+		 // 
+		<a id="colors" href="#">Colors!</a>
+		 // 
+		<a id="change-font" href="#">Fonts!</a>
+		 // 
+		<a href="about_me.html">About Me</a>
 	</nav>
 
 	<h1>Benjamin Villard's placeholder title</h1>
 	<p>Welcome to my little corner of the internet! Here i'll be infrequently posting about my passions and hobbies.
 	<br>This is my first project with html, so it's quite rough.</p>
 
-	<script src="palette_changer.js"></script>
 </body>
 </html>
