--- a/posts.html
+++ b/posts.html
@@ -5,14 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog // Benjamin Villard</title>
     <link type="text/css" href="styles.css" rel="stylesheet"/>
+    <script src="font_changer.js" defer></script>
+    <script src="palette_changer.js" defer></script>
 
 </head>
 <body>
     <nav>
-		<a href="index.html"><--</a> /
-		/ <a id="colors" href="#">Colors!</a> /
-        / <a id="change-font" href="#">Fonts!</a> /
-		/ <a href="about_me.html">About Me</a>
+		<a href="index.html"><--</a>
+         // 
+		<a id="colors" href="#">Colors!</a>
+         // 
+        <a id="change-font" href="#">Fonts!</a>
+         // 
+		<a href="about_me.html">About Me</a>
 	</nav>
     <h1>my Blog</h1>
 
@@ -20,7 +25,6 @@
         <p>loading posts...</p>
     </main>
 
-    <script src="palette_changer.js"></script>
     <script src="blog_loader.js"></script>
 </body>
 </html>
