sorting and filtering works!

--- a/posts.html
+++ b/posts.html
@@ -21,6 +21,16 @@
 	</nav>
     <h1>my Blog</h1>
 
+    <nav id="filter-nav">
+        <a href="#">Date up</a>
+         //
+        <a href="#">Date down</a>
+         //
+        <a href="#">Category1</a>
+         //
+        <a href="#">Category2</a>
+    </nav>
+
     <main id="blog-content">
         <p>loading posts...</p>
     </main>
