an attempt at otsu's method to 2bitify all images

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link type="text/css" href="styles.css" rel="stylesheet"/>
 	<script src="font_changer.js" defer></script>
 	<script src="palette_changer.js" defer></script>
+	<script src="imageThreshold.js" defer></script>
 
 </head>
 <body>
@@ -24,5 +25,8 @@
 	<p>Welcome to my little corner of the internet! Here i'll be infrequently posting about my passions and hobbies.
 	<br>This is my first project with html, so it's quite rough.</p>
 
+	<div class="image-container">
+        <img class="fullcolor-img" src="test-screen.jpg" alt="test-screen">
+    </div>
 </body>
 </html>
