--- a/posts.html
+++ b/posts.html
@@ -7,6 +7,7 @@
     <link type="text/css" href="styles.css" rel="stylesheet"/>
     <script src="font_changer.js" defer></script>
     <script src="palette_changer.js" defer></script>
+    <script src="imageThreshold.js" defer></script>
 
 </head>
 <body>
@@ -22,13 +23,13 @@
     <h1>my Blog</h1>
 
     <nav id="filter-nav">
-        <a href="#">Date up</a>
+        <a href="#">date-up</a>
          //
-        <a href="#">Date down</a>
+        <a href="#">date-down</a>
          //
-        <a href="#">Category1</a>
+        <a href="#">ttrpgs</a>
          //
-        <a href="#">Category2</a>
+        <a href="#">fountain-pens</a>
     </nav>
 
     <main id="blog-content">
