white space shenanigans

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<br>This is my first project with html, so it's quite rough.</p>
 
 	<div class="image-container">
-        <img class="fullcolor-img" src="test-screen.jpg" alt="test-screen">
+        <img class="fullcolor-img" src="test-screen.png" alt="test-screen">
     </div>
 </body>
 </html>
