asked llama3 for the otsu implementation.

--- a/index.html
+++ b/index.html
@@ -24,8 +24,6 @@
 	<p>Welcome to my little corner of the internet! Here i'll be infrequently posting about my passions and hobbies.
 	<br>This is my first project with html, so it's quite rough.</p>
 
-	<div class="image-container">
-        <img class="fullcolor-img" src="test-screen.png" alt="test-screen">
-    </div>
+    <img id="original-image" src="original-image.png" alt="test-screen">
 </body>
 </html>
